[gd_scene load_steps=61 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Art/DW_Character_Jump_Sprite_Sheet.png" type="Texture" id=3]
[ext_resource path="res://Art/DW_Character_Run_Sprite_Sheet.png" type="Texture" id=4]
[ext_resource path="res://Art/DW_Character_Idle_Sprite Sheet.png" type="Texture" id=5]
[ext_resource path="res://Art/DW_Character_Wall_Jump.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=49]
radius = 16.0
height = 50.0

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1500, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1800, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2100, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1200, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1500, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1800, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2100, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2400, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2700, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3000, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3300, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 264, 452 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 264, 0, 264, 452 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 528, 0, 264, 452 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 792, 0, 264, 452 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1056, 0, 264, 452 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 300, 452 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 300, 452 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ) ],
"loop": false,
"name": "wall",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 82 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": false,
"name": "wallJump",
"speed": 5.0
} ]

[sub_resource type="Animation" id=36]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=37]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=32]
resource_name = "run"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=74]
resource_name = "wall"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "wall" ]
}

[sub_resource type="Animation" id=75]
resource_name = "wallJump"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "wallJump" ]
}

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=76]
animation = "wall"

[sub_resource type="AnimationNodeAnimation" id=77]
animation = "wallJump"

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
advance_condition = "running"

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=78]

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=81]

[sub_resource type="AnimationNodeStateMachine" id=42]
states/idle/node = SubResource( 38 )
states/idle/position = Vector2( 291, 211.988 )
states/jump/node = SubResource( 44 )
states/jump/position = Vector2( 406.667, 90 )
states/run/node = SubResource( 39 )
states/run/position = Vector2( 592.333, 212.333 )
states/wall/node = SubResource( 76 )
states/wall/position = Vector2( 773, 49 )
states/wallJump/node = SubResource( 77 )
states/wallJump/position = Vector2( 826, 158 )
transitions = [ "idle", "run", SubResource( 40 ), "run", "idle", SubResource( 41 ), "idle", "jump", SubResource( 45 ), "jump", "idle", SubResource( 46 ), "jump", "run", SubResource( 47 ), "run", "jump", SubResource( 48 ), "jump", "wall", SubResource( 78 ), "wall", "wallJump", SubResource( 79 ), "wallJump", "wall", SubResource( 80 ), "wallJump", "jump", SubResource( 81 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=43]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 342, 175 )
script = ExtResource( 1 )

[node name="ThreadPos" type="Position2D" parent="."]
position = Vector2( 32, -58 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( -16, 39 )
shape = SubResource( 49 )

[node name="Needle" type="Sprite" parent="."]
position = Vector2( 3, -8 )
rotation = 2.52472
scale = Vector2( 0.658644, 1.95727 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -44, -30 )
scale = Vector2( 0.204587, 0.241501 )
frames = SubResource( 4 )
animation = "idle"
frame = 7
playing = true
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/idle = SubResource( 36 )
anims/jump = SubResource( 37 )
anims/run = SubResource( 32 )
anims/wall = SubResource( 74 )
anims/wallJump = SubResource( 75 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 42 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 43 )
parameters/conditions/running = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1, 1 )
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true
smoothing_speed = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 2 )

[node name="PauseMenu" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -70.0
margin_right = 41.5
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.196078, 0, 1, 1 )
text = "Resume"
flat = true

[node name="Collections" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.196078, 0, 1, 1 )
text = "Collections"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.196078, 0, 1, 1 )
text = "Controls"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_top = 72.0
margin_right = 83.0
margin_bottom = 92.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.196078, 0, 1, 1 )
text = "Save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_top = 96.0
margin_right = 83.0
margin_bottom = 116.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.196078, 0, 1, 1 )
text = "Load"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_top = 120.0
margin_right = 83.0
margin_bottom = 140.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.196078, 0, 1, 1 )
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -33, 44 )
enabled = true
cast_to = Vector2( 0, 36.733 )
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 2, 45 )
enabled = true
cast_to = Vector2( 0, 36.733 )
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="."]
position = Vector2( -15, 44 )
scale = Vector2( 0.954545, 1.00362 )
enabled = true
cast_to = Vector2( 0, 36.733 )
collide_with_areas = true

[node name="RayCast2D4" type="RayCast2D" parent="."]
position = Vector2( -23, 44 )
scale = Vector2( 0.954545, 1.00362 )
enabled = true
cast_to = Vector2( 0, 36.733 )
collide_with_areas = true

[node name="RayCast2D5" type="RayCast2D" parent="."]
position = Vector2( -7, 44 )
scale = Vector2( 0.954545, 1.00362 )
enabled = true
cast_to = Vector2( 0, 36.733 )
collide_with_areas = true

[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Resume" to="CanvasLayer" method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Collections" to="CanvasLayer" method="_on_Collections_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Controls" to="CanvasLayer" method="_on_Controls_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Save" to="CanvasLayer" method="_on_Save_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Load" to="CanvasLayer" method="_on_Load_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/MainMenu" to="CanvasLayer" method="_on_MainMenu_pressed"]
